# LidarrAPI.Metadata

./: .dockerignore  .editorconfig  .mise.toml  Dockerfile  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml
lidarrmetadata/: api.py  app.py  cache.py  chart.py  config.py  crawler.py  limit.py  provider.py  server.py  stats.py  util.py
lidarrmetadata/sql/: all_spotify_maps.sql  artist_by_id.sql  artist_redirect.sql  data_vintage.sql  release_group_by_id.sql  release_group_by_recording_ids.sql  release_group_redirect.sql  release_group_search_artist_mbid.sql  release_group_series.sql  updated_albums.sql  updated_artists.sql  updated_spotify_albums.sql  updated_spotify_artists.sql
scripts/: search_cache.py
