[tool.poetry]
name = "lidarrmetadata"
version = "0.1.0"
description = "Lidarr metadata API"
authors = ["Lidarr <development@lidarr.audio>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.12,<4"
aiocache = "0.12.3"
aiofiles = "24.1.0"
aiohttp = "3.12.15"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
beautifulsoup4 = "4.13.5"
billboard-py = "7.1.0"
blinker = "1.9.0"
certifi = "2025.8.3"
chardet = "5.2.0"
click = "8.2.1"
flask = "3.1.2"
gunicorn = "23.0.0"
h11 = "0.16.0"
h2 = "4.3.0"
hiredis = "3.2.1"
hpack = "4.1.0"
httptools = "0.6.4"
hypercorn = "0.17.3"
hyperframe = "6.1.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
multidict = "6.6.4"
priority = "2.0.0"
pylast = "5.5.0"
pytelegraf = "0.3.3"
python-dateutil = "2.9.0.post0"
python-levenshtein = "0.27.1"
pytz = "2025.2"
quart = "0.20.0"
redis = "6.4.0"
requests = "2.32.5"
sentry-sdk = "2.37.1"
six = "1.17.0"
soupsieve = "2.8"
spotipy = "2.25.1"
toml = "0.10.2"
typing-extensions = "4.15.0"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
uvloop = "0.21.0"
werkzeug = "3.1.3"
wsproto = "1.2.0"
yarl = "1.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^1.1.0"
mockredispy = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lidarr-metadata-server = "lidarrmetadata.server:main"
lidarr-metadata-crawler = "lidarrmetadata.crawler:main"
