[project]
name = "lidarrmetadata"
version = "0.1.0"
description = "Lidarr metadata API"
authors = [
  { name="Lidarr", email="development@lidarr.audio" },
]
readme = "README.rst"
requires-python = ">=3.13,<4"

[tool.poetry.dependencies]
aiocache = "0.12.3"
aiofiles = "25.1.0"
aiohttp = "3.13.3"
async-timeout = "5.0.1"
asyncpg = "0.31.0"
attrs = "25.4.0"
beautifulsoup4 = "4.14.3"
billboard-py = "7.1.0"
blinker = "1.9.0"
certifi = "2026.1.4"
chardet = "5.2.0"
click = "8.3.1"
flask = "3.1.2"
gunicorn = "23.0.0"
h11 = "0.16.0"
h2 = "4.3.0"
hiredis = "3.3.0"
hpack = "4.1.0"
httptools = "0.7.1"
hypercorn = "0.18.0"
hyperframe = "6.1.0"
idna = "3.11"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.3"
multidict = "6.7.0"
priority = "2.0.0"
pylast = "7.0.1"
pytelegraf = "0.3.3"
python-dateutil = "2.9.0.post0"
python-levenshtein = "0.27.3"
pytz = "2025.2"
quart = "0.20.0"
redis = "7.1.0"
requests = "2.32.5"
sentry-sdk = "2.49.0"
six = "1.17.0"
soupsieve = "2.8.1"
spotipy = "2.25.2"
toml = "0.10.2"
typing-extensions = "4.15.0"
urllib3 = "2.6.3"
uvicorn = "0.40.0"
uvloop = "0.22.1"
werkzeug = "3.1.5"
wsproto = "1.3.2"
yarl = "1.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
mockredispy = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lidarr-metadata-server = "lidarrmetadata.server:main"
lidarr-metadata-crawler = "lidarrmetadata.crawler:main"
